objects/ssot__PromotionActionableList__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ActionableListId__c</fullName>
        <label>Actionable List</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Promotion Actionable List Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PromotionId__c</fullName>
        <label>Promotion</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1729831543807_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PromotionActionableList_ActionableLi_rel</label>
        <referenceTo>ssot__ActionableList__dlm</referenceTo>
        <relationshipLabel>PromotionActionableList_ActionableLi_rel</relationshipLabel>
        <relationshipName>rel_1729831543807_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731659078948_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PromotionActionableList_PromotionId__rel</label>
        <referenceTo>ssot__Promotion__dlm</referenceTo>
        <relationshipLabel>PromotionActionableList_PromotionId__rel</relationshipLabel>
        <relationshipName>rel_1731659078948_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>